--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <span></span>
         Button
     </a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Button
+    </a>
 </body>
 
 </html>
